--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation files('libs\\MathParser.org-mXparser.jar')
     implementation files('libs\\MathParser.org-mXparser.jar')
     implementation files('libs\\MathParser.org-mXparser.jar')
+    implementation files('libs\\MathParser.org-mXparser.jar')
+    implementation files('libs\\MathParser.org-mXparser.jar')
 
 
     testImplementation 'junit:junit:4.13.2'
